--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ NODE_PORT=3000
 USE_HTTPS=false
 SSL_KEY_LOCATION=/path/to/privkey.pem
 SSL_CERT_LOCATION=/path/to/fullchain.pem
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=123456789
 DB_NAME=addressdb
